# factorio-util

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: pyfactorio.py
