[project]
name = "factorio-util"
authors = [
  { name="Sarah Harvey", email="s@shh.sh" },
]
description = "A set of scripts to extract and analyze factorio data"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
  "luadata==0.1.4",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/worldwise001/factorio-util"
Issues = "https://github.com/worldwise001/factorio-util/issues"

[project.scripts]
pyfactorio = "pyfactorio:run"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "pkg_version_dyn.py"
